# financial-ingestion

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pipeline.yml
config/: config.yaml
src/: constants.py  database.py  ingestion.py  main.py  models.py
